# visTvis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  static_metadata_template.yaml
examples/: simple_usage.py
src/vistvis/: __init__.py  decorators.py  models.py  overlay_attention.py  plot_attention_for_reconstruction.py  run_overlay_for_reconstruction.py  state.py  static_metadata.py  storage.py
