[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vistvis"
version = "0.1.0"
description = "Store and visualize attention weights for Visual Transformers."
readme = "README.md"
authors = [{ name = "Aleksandre Kandelaki" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kandelak/visTvis"
Repository = "https://github.com/kandelak/visTvis"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
